--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "prettier:check": "npx prettier --check ./src",
-    "prettier:format": "npx prettier --write ./src"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
